--- a/index.html
+++ b/index.html
@@ -4,11 +4,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Classic Recipe</title>
 </head>
 <body>
     <h1>Classic Cheesecake Recipe</h1>
-    <h6>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</h6>
+    <h5>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</h5>
     
+    <img src="img/cheese.jpg" alt="cheesecake picture" >
+
+
+    <h2>Ingredients</h2>
+
+    <h4>Graham Cracker Crust</h4>
+    <div>
+        <input type="checkbox">
+        <label for="cracker">1 and 1/2 cups (150g) graham cracker crumbs (about 10 full sheet graham crackers)</label>
+        <br>
+        <input type="checkbox">
+        <label for="cracker">5 Tablespoons (70g) unsalted butter, melted</label>
+        <br>
+        <input type="checkbox">
+        <label for="">1/4 cup (50g) granulated sugar</label>
+        <br>
+    </div>
+    
+    <h4>Cheesecake</h4>
+
+    <div>
+        <input type="checkbox" >
+        <label for="cracker">four 8-ounce blocks (904g) full-fat cream cheese, softened to room temperature</label>
+        <br>
+        <input type="checkbox">
+        <label>1 cup (200g) granulated sugar</label>
+        <br>
+        <input type="checkbox">
+        <label>1 cup (240g) full-fat sour cream, at room temperature</label>
+        <br>
+        <input type="checkbox">
+        <label>1 teaspoon pure vanilla extract</label>
+        <br>
+        <input type="checkbox">
+        <label>2 teaspoons fresh lemon juice (optional, but recommended)</label>
+        <br>
+        <input type="checkbox">
+        <label>3 large eggs, at room temperature</label>
+        <br>
+        <input type="checkbox">
+        <label>topping suggestions: salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce (recipe in notes) </label>
+        <br>
+    </div>
+
+    <h2>Instructions</h2>
+    <h3 class="number">1</h3>
+    <p>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</p>
+
+
+    <h3 class="number">2</h3>
+    <p>Make the crust: Using a food processor, pulse the graham crackers into crumbs. Pour into a medium bowl and stir in sugar and melted butter until combined. (You can also pulse it all together in the food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the sides of a 9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a measuring cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place the hot pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath in step 4. Allow crust to slightly cool as you prepare the filling.</p>
+
+    <h3 class="number">3</h3>
+    <p>Make the filling: Using a handheld or stand mixer fitted with a paddle attachment, beat the cream cheese and granulated sugar together on medium-high speed in a large bowl until the mixture is smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice then beat until fully combined. On medium speed, add the eggs one at a time, beating after each addition until just blended. After the final egg is incorporated into the batter, stop mixing. To help prevent the cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you can.</p>
+
+    <h3 class="number">4</h3>
+    <p>Prepare the simple water bath (see note) Boil a pot of water. You need 1 inch of water in your roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot water. As the water is heating up, wrap the aluminum foil around the springform pan. Pour the cheesecake batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer. Place the pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place in the oven. (Or you can place the roasting pan in the oven first, then pour the hot water in. Whichever is easier for you.)/p>
+
+    <h3 class="number">5</h3>
+    <p>Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center of the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open the oven door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1 hour. Remove from the oven and water bath, then cool cheesecake completely at room temperature. Then refrigerate the cheesecake for at least 4 hours or overnight.</p>
+
+    <h3 class="number">6</h3>
+    <p>Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife clean and dip into warm water between each slice.</p>
+
+    <h3 class="number">7</h3>
+    <p>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up to 5 days.</p>
+
+
+    <h5> Source: https://sallysbakingaddiction.com/classic-cheesecake/ </h5>
+    <h5>created by jeesssik - devChallenges.io</h5>
+
+    <footer>© 2020 Thu Nghiem, devChallenges.io <br> Please avoid sharing figma link as the content is copyrighted to devChallenges.io and use the challenge link instead.</footer>
 </body>
 </html>
